# advent-of-code-2021-rust

./: Cargo.toml
src/: main.rs
