[package]
name = "aoc2021"
version = "0.1.0"
authors = ["tref"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"